--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     
         <div style=" width: 300px; height: inherit; align-items: center; padding-top: 10px; padding-left: 5px;">
             <div  class=" fa-bounce"  style="width: 100px; height: 100px; border-radius: 50%; border: 3px solid black; background-image: url(image/div.webp); background-size: 100% 100%; "></div>
-            <p style="font-size: 15px; font-weight: bold; color: black; text-align: center; color: rgb(251, 250, 250);"> Mr Jitendar</p>
+            <p style="font-size: 15px; font-weight: bold; color: black; text-align: center; color: rgb(251, 250, 250);"> Minakshi</p>
             <center>
             <i class="fa-solid fa-star fa-beat" style="color: #FFD43B; text-align: right;"></i>  <i class="fa-solid fa-star fa-beat" style="color: #FFD43B; text-align: right;"></i> <i class="fa-solid fa-star fa-beat" style="color: #FFD43B; text-align: right;"></i> <i class="fa-solid fa-star fa-beat" style="color: #FFD43B; text-align: right;"></i> <i class="fa-solid fa-star fa-beat" style="color: #FFD43B; text-align: right;"></i> 
         </center>
